--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,10 @@ a {
     text-decoration: none;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -61,9 +65,6 @@ main {
 .main-header ul li a {
     color: #fff;
     font-size: 14px;
-}
-
-.main-header .profile {
 }
 
 /* gnb */
@@ -166,7 +167,7 @@ main {
     display: inline-block;
     width: 14px;
     height: 12px;
-    background-image: url(./images/icons.png);
+    background-image: url(../images/icons.png);
     background-position: -50px -20px;
     margin-right: 6px;
 }
@@ -175,7 +176,7 @@ main {
     display: inline-block;
     width: 14px;
     height: 14px;
-    background-image: url(./images/icons.png);
+    background-image: url(../images/icons.png);
     background-position: -24px -43px;
     margin-right: 6px;
 }
@@ -184,7 +185,7 @@ main {
     display: inline-block;
     width: 14px;
     height: 14px;
-    background-image: url(./images/icons.png);
+    background-image: url(../images/icons.png);
     background-position: -51px -43px;
     margin-right: 6px;
 }
@@ -282,12 +283,6 @@ main {
 .mail-item-list .selected {
     background: #f0f1f5;
 } 
-
-.mail-item-list ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
 
 .mail-item-list ul li:not(:first-child) {
     border-top: 1px solid #ddd;
@@ -403,17 +398,24 @@ main {
         width: 100%;
         margin: 0 20px;
     }
-}
 
-@media screen and (max-width: 910px) {
-	.lnb {
+    .main-header-search {
+        margin-left: 20px;
+        width: 40%;
+    }
+
+    .lnb {
         flex-direction: column;
         height: 150px;
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
     .mail-content {
+        display: none;
+    }
+
+    .main-header-search {
         display: none;
     }
 }
